# consulta-vehicular

./: .gitignore  pyproject.toml  railway.toml
app/: atu.py  callao.py  captcha.py  main.py  navegador.py  revisiontecnica.py  satlima.py  soat.py  sunarp.py  sutran.py
server/: auth.py  captcha.py  db.py  main.py  requirements.txt
