[project]
name = "caltimeria"
version = "0.1.0"
description = "Consulta vehicular: SAT Lima, Callao, SUTRAN, ATU, SOAT y Revision Tecnica (CITV-MTC)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "playwright>=1.48.0",
    "opencv-python>=4.10.0.84",
    "numpy>=1.26.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.0",
    "easyocr>=1.7.2",
    "patchright>=1.61.1",
    "python-dotenv>=1.2.2",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.13.0",
    "bcrypt>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
